# ros_getting_started

./: CMakeLists.txt  README.md  package.xml
launch/: README.md  int32_launch.launch
msg/: greet.msg
ros_basics/: .goutputstream-MP7IX0  CMakeLists.txt  package.xml
ros_basics/launch/: custom_msg_launch.launch  float_launch.launch  int32_launch.launch  str_py_launch.launch  string_launch.launch
ros_basics/scripts/: float_publisher.py  float_subscriber.py  greet_pub.py  int32_publisher.py  int32_subscriber.py  msg_publisher.py  msg_subscriber.py  odd_even_node.py  ros_param.py  simple_py_publisher.py  simple_py_subscriber.py  string_publisher.py  string_subscriber.py  user_input_node.py
ros_basics/src/: demo_action_server.cpp  float_publisher.cpp  float_subscriber.cpp  int32_publisher.cpp  int32_subscriber.cpp  msg_publisher.cpp  msg_subscriber.cpp  simple_cpp_publisher.cpp  simple_cpp_subscriber.cpp  srv_server.cpp  string_publisher.cpp  string_subscriber.cpp
ros_opencv_pkg/: CMakeLists.txt  package.xml
ros_opencv_pkg/scripts/: video_pub.py  video_sub.py
scripts/: int32_publisher.py  int32_subscriber.py  string_publisher.py  string_subscriber.py
src/: demo_action_client.cpp  int32_publisher.cpp  int32_subscriber.cpp  msg_subscriber.cpp  srv_client.cpp  string_publisher.cpp  string_subscriber.cpp
